fix css layout of page components on larger screens, scrollbar-width adjustments

--- a/src/Styles/Maps.css
+++ b/src/Styles/Maps.css
@@ -3,7 +3,6 @@
   height: 90vh;
   background-color: black;
   color: white;
-  overflow: scroll;
   scrollbar-width: none;
   background-image: url("../Assets/backgrounds/inteldesk.png");
   background-size: cover;
