--- a/src/Styles/Randomizer.css
+++ b/src/Styles/Randomizer.css
@@ -15,7 +15,7 @@
 
 .overlay {
   width: inherit;
-  min-height: inherit;
+  height: inherit;
   display: flex;
 }
 
